Update deprecation